swaps stock pfp for cat pfp

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,10 @@
 
     <header>
       <div>
-          <img src="/images/profile-hex.png"> 
+          <!-- <img src="/images/profile-hex.jpeg"> -->
+
+          <img class="pfp" src="/images/cat-pfp.jpg">
+
       </div>
       <br>
       <div>
