--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
@@ -39,7 +40,7 @@
       </div>
 
       <div class="navbar2">                 
-        <div><strong>Write</strong> a new tweet</div>
+        <div><b>Write</b> a new tweet</div>
         <div><i class="fa-solid fa-angles-down"></i></div>
       </div>
     </nav>
@@ -53,7 +54,7 @@
       </div>
       <br>
       <div>
-          <h2>Your Name</h2>
+          <h2>Nori the Cat</h2>
       </div>
     </header>
 
@@ -69,11 +70,20 @@
           <div class="navbar3">
             <div><button class="button" type="submit">Tweet</button></div>
             
-            <div><output name="counter" class="counter" for="tweet-text">140</output></div>
+            <div><output name="counter" class="counter" for="tweet-text"></output></div>
                  
           </div>
 
         </form>
+
+      </section>
+
+      <section class="existing-tweets">
+
+        <article class="tweet">
+          <h2>name</h2>
+          <footer>date</footer>
+        </article>
 
       </section>
     </main>
