--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,9 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -23,6 +25,7 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css"/>
     <link rel="stylesheet" href="/styles/header.css" type="text/css"/>
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css"/>
+    <link rel="stylesheet" href="/styles/tweets.css" type="text/css"/>
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -41,11 +44,11 @@
 
       <div class="navbar2">                 
         <div><b>Write</b> a new tweet</div>
-        <div><i class="fa-solid fa-angles-down"></i></div>
+        <div><i class="fa-solid fa-angles-down" id="tweet-arrow"></i></div>
       </div>
     </nav>
 
-    <header>
+    <header class="profile">
       <div>
           <!-- <img src="/images/profile-hex.jpeg"> -->
 
@@ -78,11 +81,24 @@
 
       </section>
 
-      <section class="existing-tweets">
+      <section class="tweet-container">
 
         <article class="tweet">
-          <h2>name</h2>
-          <footer>date</footer>
+          <header>
+            <div class="username"><img class="pfp" src="/images/cat-pfp.jpg">
+              <h3>Nori</h3></div>
+
+            <div class="display-user-tag">@NoriTheCat</div>
+          </header>
+          <p>if i fits, then i sits... right?</p>
+          <footer>
+            <div>10 days ago</div>
+            <div class="tweet-links-icons">
+              <i class="fa-solid fa-flag"></i>
+              <i class="fa-solid fa-retweet"></i> 
+              <i class="fa-solid fa-heart"></i>
+            </div>
+          </footer>
         </article>
 
       </section>
