adds test links for share, retweet and like

--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,8 @@
 
         <article class="tweet">
           <header>
-            <div class="username"><img class="pfp" src="/images/cat-pfp.jpg">
+            <div class="username">
+              <img class="pfp" src="/images/cat-pfp.jpg">
               <h3>Nori</h3></div>
 
             <div class="display-user-tag">@NoriTheCat</div>
@@ -94,9 +95,9 @@
           <footer>
             <div>10 days ago</div>
             <div class="tweet-links-icons">
-              <i class="fa-solid fa-flag"></i>
-              <i class="fa-solid fa-retweet"></i> 
-              <i class="fa-solid fa-heart"></i>
+              <a href="#"><i class="fa-solid fa-flag"></i></a>
+              <a href="#"><i class="fa-solid fa-retweet"></i></a>
+              <a href="#"><i class="fa-solid fa-heart"></i></a>
             </div>
           </footer>
         </article>
