--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,25 @@
           </header>
           <p>if i fits, then i sits... right?</p>
           <footer>
+            <div>6 days ago</div>
+            <div class="tweet-links-icons">
+              <a href="#"><i class="fa-solid fa-flag"></i></a>
+              <a href="#"><i class="fa-solid fa-retweet"></i></a>
+              <a href="#"><i class="fa-solid fa-heart"></i></a>
+            </div>
+          </footer>
+        </article>
+
+        <article class="tweet">
+          <header>
+            <div class="username">
+              <img class="pfp" src="/images/doggo-pfp.jpg">
+              <h3>Doggo</h3></div>
+
+            <div class="display-user-tag">@SirIsaacTheDog</div>
+          </header>
+          <p>If I have seen further it is by standing on the shoulders of giants</p>
+          <footer>
             <div>10 days ago</div>
             <div class="tweet-links-icons">
               <a href="#"><i class="fa-solid fa-flag"></i></a>
