modifies test tweet

--- a/public/index.html
+++ b/public/index.html
@@ -110,9 +110,9 @@
 
             <div class="display-user-tag">@SirIsaacTheDog</div>
           </header>
-          <p>If I have seen further it is by standing on the shoulders of giants</p>
+          <p>When hooman says you're a good boi</p>
           <footer>
-            <div>10 days ago</div>
+            <div class="date-time">10 days ago</div>
             <div class="tweet-links-icons">
               <a href="#"><i class="fa-solid fa-flag"></i></a>
               <a href="#"><i class="fa-solid fa-retweet"></i></a>
