fixes z index of elements

--- a/public/index.html
+++ b/public/index.html
@@ -85,13 +85,13 @@
 
         <article class="tweet">
           <header>
-            <div class="username">
+            <div class="user">
               <img class="pfp" src="/images/cat-pfp.jpg">
               <h3>Nori</h3></div>
 
             <div class="display-user-tag">@NoriTheCat</div>
           </header>
-          <p>if i fits, then i sits... right?</p>
+          <p>if i fits, i sits...</p>
           <footer>
             <div>6 days ago</div>
             <div class="tweet-links-icons">
@@ -104,13 +104,13 @@
 
         <article class="tweet">
           <header>
-            <div class="username">
+            <div class="user">
               <img class="pfp" src="/images/doggo-pfp.jpg">
               <h3>Doggo</h3></div>
 
-            <div class="display-user-tag">@SirIsaacTheDog</div>
+            <div class="display-user-tag">@IsaacTheGoodBoi</div>
           </header>
-          <p>When hooman says you're a good boi</p>
+          <p>Chased a squirrel today</p>
           <footer>
             <div class="date-time">10 days ago</div>
             <div class="tweet-links-icons">
