--- a/public/index.html
+++ b/public/index.html
@@ -81,19 +81,22 @@
 
       </section>
 
-      <section class="tweet-container">
+      <section id="tweets-container">
 
+
+        <!--
         <article class="tweet">
           <header>
             <div class="user">
               <img class="pfp" src="/images/cat-pfp.jpg">
-              <h3>Nori</h3></div>
+              <h3>Nori</h3>
+            </div>
 
             <div class="display-user-tag">@NoriTheCat</div>
           </header>
           <p>if i fits, i sits...</p>
           <footer>
-            <div>6 days ago</div>
+            <div class="date-time">6 days ago</div>
             <div class="tweet-links-icons">
               <a href="#"><i class="fa-solid fa-flag"></i></a>
               <a href="#"><i class="fa-solid fa-retweet"></i></a>
@@ -119,7 +122,7 @@
               <a href="#"><i class="fa-solid fa-heart"></i></a>
             </div>
           </footer>
-        </article>
+        </article> -->
 
       </section>
     </main>
