removes redundant properties for form

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
       <section id="new-tweet">
         <div id="er"></div>
         <h2>Compose Tweet</h2>
-        <form action="/tweets" method="POST" id="tweet-form"> 
+        <form id="tweet-form"> 
           <label for="tweet-text">What are you humming about?</label>
           
           <div class="input">
