--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- App CSS -->
+
+    <!-- Main -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+
+    <!-- Navigation bar, scroll icon -->
     <link rel="stylesheet" href="/styles/nav.css" type="text/css"/>
+
+    <!-- Profile header -->
     <link rel="stylesheet" href="/styles/header.css" type="text/css"/>
+
+    <!-- New tweet form -->
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css"/>
+
+    <!-- Tweets within Tweet Container -->
     <link rel="stylesheet" href="/styles/tweets.css" type="text/css"/>
 
     <!-- External JS -->
