cleans up code and adds new comments clarifiying code

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="/styles/header.css" type="text/css"/>
 
     <!-- New tweet form -->
-    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css"/>
+    <link rel="stylesheet" href="/styles/compose-tweet.css" type="text/css"/>
 
     <!-- Tweets within Tweet Container -->
     <link rel="stylesheet" href="/styles/tweets.css" type="text/css"/>
@@ -75,7 +75,7 @@
           <b>Write</b> a new tweet
         </div>
         <div>
-          <span class="new-tweet-click">
+          <span class="compose-tweet-click">
             <i class="fa-solid fa-angles-down" id="tweet-arrow"></i>
           </span>
         </div>
@@ -109,7 +109,7 @@
           </span>
         </div>
   
-        <section id="new-tweet">
+        <section id="compose-tweet">
           <div id="er"></div> <!-- Error handling for form validation -->
           <h2>Compose Tweet</h2>
           <form id="tweet-form"> 
